--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -105,14 +105,18 @@ nav.dark .theme-toggle svg[id="sun"] {
 }
 
 
-@media screen and (min-width: 725px) {
+@media screen and (min-width: 800px) {
     .primary-navigation .mobile-only-link {
         display: none;
     }
     
 }
-@media (max-width: 725px) {
+@media (max-width: 800px) {
     .primary-navigation {
         display: none; 
+    }
+
+    .nav-link {
+        margin-left: 0;
     }
 }
